Added compare with alchemy api